adding routes for hearing and sight

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -201,8 +201,311 @@
 
 
 						<div id="1" class="ab" style="display:none">
-						</div>
-						<div id="2" class="ab" style="display:none"> yellow.. </div>
+
+									<div class="inner">
+										<div class="flex flex-2">
+											<div class="col col2">
+												<h3>Visual impairment route</h3>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+												<h3> Ground floor </h3>
+												<h4>1. Go to the Ticket Desk to get your ticket (assistance dogs get free entry).</h4>
+												<p>Wheelchairs are available from the Ticket Desk</p>
+												<p>Please ask a member of GSC staff if you require a manual wheelchair for the duration of your visit to the Centre</p>
+												<p>Please note this is available on a first come first serve basis</p>
+
+
+												<h4>2.	Take the lift up to Floor 1</h3>
+
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 1 </h3>
+
+												<h4>3.	Visit the Planetarium to learn about the cool realms of space – you might want to get someone to read out the information for you.</h4>
+
+												<h4>4.	Test your sense of touch with the Touch It Feely Box and Velvet Hand Illusion exhibits</h4>
+
+												<h4>5.	Walk by the windows, round to The Big Explorer area</h4>
+
+												<h4>6.	Take the lift up to Floor 2</h4>
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 2 </h3>
+
+												<h4>7.	Experience the force of high wind speeds, up to 97.2 km/h with the Hurricane simulator</h4>
+
+												<h4>8.	Discover the power of water at the Hydro Wall and Pelton Water Wheel</h4>
+
+												<h4>9.	Learn about various forms of power at the Fundamentals Wall</h4>
+
+												<h4>10.	Take the lift up to Floor 3</h4>
+
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 3 </h3>
+
+												<h4> 11.	Learn about the touch sensory map of your brain at Sensory Homunculus</h4>
+
+												<h4> 12.	Explore your bodies at the Sensory Walls </h4>
+
+												<h4> 13.	Compete with a buddy to find out who can be the most relaxed at the ‘Whose Brain Is More Relaxed?’ exhibit</h4>
+
+												<h4> 14.  Take the lift back down to Floor 1 </h4>
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Ground Floor</h3>
+
+												<h4> 15.	Visit the shop</h4>
+
+												<br>
+												<br>
+												<br>
+
+
+												<p style="font-size:200%;"><i> We hope that you enjoyed your visit and that we will see you again soon!</i> </p>
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+
+
+
+
+									</div>
+
+
+
+
+						 </div>
+
+
+						<!-- Hearing impairment -->
+						<div id="2" class="ab" style="display:none">
+
+									<div class="inner">
+										<div class="flex flex-2">
+											<div class="col col2">
+												<h3>Hearing impairment route</h3>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+												<h3> Ground floor </h3>
+												<h4>1. Go to the Ticket Desk to get your ticket.</h4>
+												<p>Remember to present your access card at the ticket desk</p>
+												<p>Induction loops are available at the Front Desk (but also the IMAX Theatre, Auditorium and Science Show Theatre)</p>
+												<p>If you would like to attend any events happening in either of these places, feel free to either collect the induction loops at the Front Desk or at either of the aforementioned places </p>
+												<p>Please switch Hearing Aids to the ‘T’ position to use this facility</p>
+
+
+
+												<h4>2.	Visit the over 30 double decker buses tall, rotating Glasgow Tower and take in the breathtaking 360° view of Glasgow</h4>
+												<p>Please check for opening status in advance of your visit as weather conditions can change quickly and as a result the tower may be closed for safety reasons</p>
+
+												<h4>3.	Take the lift up to Floor 1</h3>
+
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 1 </h3>
+
+												<h4>4.	Visit the Planetarium to learn about the cool realms of space</h4>
+
+												<h4>5.	Walk through The Hive area surrounding the Science Show Theatre, making sure you don’t miss Balancing Beach Ball in Explore and Discover – can you get the ball through the two rings?</h4>
+
+												<h4>6.	Walk around, making sure you don’t miss the Holophonic Sound and Room On Its Side exhibits in A Question of Perception, where you get to guess where the sound is coming from and defy gravity</h4>
+
+												<h4>7.	Take the lift up to Floor 2</h4>
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 2 </h3>
+
+												<h4>8.	Experience the force of high wind speeds, up to 97.2 km/h with the Hurricane simulator</h4>
+
+												<h4>9.	Discover the power of water at the Hydro Wall and Pelton Water Wheel</h4>
+
+												<h4>10.	See how you can turn kinetic energy into electrical energy by having a race at the full size Scalextric racetrack</h4>
+
+												<h4>11.	Take the lift up to Floor 3</h4>
+
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Floor 3 </h3>
+
+												<h4> 12.	View and record images of your skin with the Bendy Microscope </h4>
+
+												<h4> 13.	Explore the inside of three humans with Virtual Autopsy </h4>
+
+												<h4> 14.	Find out ‘How Fast Can You Sprint?’ at the sprint track</h4>
+
+												<h4> 15.	Measure and record the electricity of your heart at the Heart ECG exhibit </h4>
+
+												<h4> 16.  Take the lift back down to Floor 1 </h4>
+
+
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+										<div class="flex flex-2">
+
+											<div class="col col2">
+
+												<h3> Ground Floor</h3>
+
+												<h4> 17.	Visit the shop</h4>
+
+												<br>
+												<br>
+												<br>
+
+
+												<p style="font-size:200%;"><i> We hope that you enjoyed your visit and that we will see you again soon!</i> </p>
+
+
+											</div>
+
+											<div class="col col1 first">
+												<div class="image round fit">
+													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+												</div>
+											</div>
+										</div>
+
+
+
+
+
+
+									</div>
+
+
+
+
+						 </div>
 
 
 						<!-- Physical impairment -->
@@ -211,7 +514,7 @@
 									<div class="inner">
 										<div class="flex flex-2">
 											<div class="col col2">
-												<h3>Physical impairment</h3>
+												<h3>Physical impairment route</h3>
 											</div>
 										</div>
 
