--- a/routePlanning/map.html
+++ b/routePlanning/map.html
@@ -53,8 +53,6 @@
         ? (window.outerWidth - 1850) / 2
         : ($(window).width() - 1850) / 2;
 
-    visualInit();
-
     $('#map').css('margin-left', leftmargin+'px');
     $('#map').on('click', function() {
         clickX = event.pageX - this.offsetLeft;
@@ -62,9 +60,32 @@
         console.log(`(${clickX}, ${clickY})`);
     });
 
-    $('.node').click(function() {
-        console.log($(this).attr('id'));
-        linkNodes([$(this).attr('id')]);
+    localStorage.setItem('access', 0);
+
+    $(window).on('storage', function(e) {
+        switch(e.originalEvent.newValue) {
+            case '1': // Visual impairment;
+                clearLinks();
+                visualInit();
+                linkNodes(['TicketDesk', 'Lift0b', 'Lift1b', 'ThePlanetarium', 'ScienceShowTheater', 'Lift1a', 'Lift2a', 'Lift2b', 'Lift3b']);
+                break;
+            case '2':
+                clearLinks();
+                visualInit();
+                linkNodes(['TicketDesk', 'TowerEntrance', 'GlasgowTowerBase', 'Lift0a', 'Lift1a', 'ThePlanetarium', 'ScienceShowTheater', 'Lift1a', 'Lift2a', 'Lift2b', 'Lift3b']);
+                break;
+            case '3':
+                clearLinks();
+                visualInit();
+                linkNodes(['TicketDesk', 'Lift0b', 'Lift1b', 'ThePlanetarium', 'ScienceShowTheater', 'Lift1b', 'Lift2b', 'Lift3b']);
+                break;
+            case '4':
+                clearLinks();
+                visualInit();
+                linkNodes(['TicketDesk', 'Lift0b', 'Lift1b', 'ScienceShowTheater', 'Lift1b', 'Lift2b', 'Lift3b']);
+                break;
+            default: break;
+        }
     });
 </script>
 
