changing reception extension

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -490,7 +490,7 @@
 
 											<div class="col col1 first">
 												<div class="image round fit">
-													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.jpg"alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.png"alt="" /></a>
 												</div>
 											</div>
 										</div>
@@ -638,7 +638,7 @@
 
 											<div class="col col1 first">
 												<div class="image round fit">
-													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.jpg" alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.png" alt="" /></a>
 												</div>
 											</div>
 										</div>
@@ -784,7 +784,7 @@
 
 											<div class="col col1 first">
 												<div class="image round fit">
-													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.jpg" alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.png" alt="" /></a>
 												</div>
 											</div>
 										</div>
