adding gift shop

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -400,7 +400,7 @@
 
 											<div class="col col1 first">
 												<div class="image round fit">
-													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.png"alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.jpg"alt="" /></a>
 
 												</div>
 											</div>
@@ -541,7 +541,7 @@
 											<div class="col col1 first">
 												<div class="image round fit">
 
-													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.png" alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.jpg" alt="" /></a>
 
 												</div>
 											</div>
@@ -689,7 +689,7 @@
 											<div class="col col1 first">
 												<div class="image round fit">
 
-													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.png" alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.jpg" alt="" /></a>
 
 												</div>
 											</div>
