--- a/routePlanning/map.html
+++ b/routePlanning/map.html
@@ -77,7 +77,7 @@
             case '3':
                 clearLinks();
                 visualInit();
-                linkNodes(['TicketDesk', 'Lift0b', 'Lift1b', 'ThePlanetarium', 'ScienceShowTheater', 'Lift1b', 'Lift2b', 'Lift3b', 'Lift3a', 'Lift2a', 'Lift1a', 'Lift0a', 'TheShop']);
+                linkNodes(['TicketDesk', 'Lift0b', 'Lift1b', 'ThePlanetarium', 'ScienceShowTheater', 'Lift1a', 'Lift2a', 'Lift2b', 'Lift3b', 'Lift3a', 'Lift2a', 'Lift1a', 'Lift0a', 'TheShop']);
                 break;
             case '4':
                 clearLinks();
