--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -89,9 +89,9 @@
 										<div style="width:200px;">
 										  <Select id="abilityselector">
 										    <option value="0">Adapt for:</option>
-												<option value="1">Visual impairment</option>
-												<option value="2">Hearing impairment</option>
-												<option value="3">Physical impairment</option>
+												<option value="1">Visual Impairment</option>
+												<option value="2">Hearing Impairment</option>
+												<option value="3">Physical Impairment</option>
 												<option value="4">Autism</option>
 										  </select>
 										</div>
@@ -420,7 +420,7 @@
 									<div class="inner">
 										<div class="flex flex-2">
 											<div class="col col2">
-												<h3>Physical impairment route</h3>
+												<h3>Physical Impairment Route</h3>
 											</div>
 										</div>
 
@@ -567,7 +567,7 @@
 									<div class="inner">
 										<div class="flex flex-2">
 											<div class="col col2">
-												<h3>Autism route</h3>
+												<h3>Autism Route</h3>
 											</div>
 										</div>
 
