--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -41,6 +41,13 @@
 						<p>Aiming to make science accessible to everyone.</p>
 					</header>
 					<a href="#main" class="button big scrolly">Plan your visit.</a>
+
+					<br>
+					<br>
+					<br>
+
+
+					<a href="disvis.html" class="button">Blind</a>
 				</div>
 			</section>
 
