correcting photo names

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -68,30 +68,7 @@
 										<h3>Recommended Route</h3>
 										<p>If you have any accesibility requirements, you can use the route planning tool below to tailor your visit to your needs. </p>
 
-										<!--<div align="center" style="float:center;text-align:center;">-->
-										<!--
-											<div class="dropdown">
 
-										  <button class="dropbtn" style="width:400%;">Adapt for:</button>
-
-
-										  <div class="dropdown-content">
-												<Select id="colorselector">
-										    <a class="dropdown-item" id="visual">Visual impairment</a>
-										    <a class="dropdown-item" id="hearing">Hearing impairment</a>
-										    <a class="dropdown-item" id="physical">Physical impairment</a>
-										    <a class="dropdown-item" id="autism">Autism</a>
-												</select
-											</div>
-										</div>
-
-
-										<Select id="abilityselector">
-											<option value="visual">Visual impairment</option>
-											<option value="hearing">Hearing impairment</option>
-											<option value="physical">Physical impairment</option>
-											<option value="autism">Autism</option>
-										</Select>-->
 
 										<div style="width:200px;">
 										  <Select id="abilityselector">
@@ -124,19 +101,6 @@
 				<!-- Section -->
 					<section class="wrapper style1">
 
-						<!-- <div class="inner">
-							<div class="flex flex-2">
-								<div class="col col2">
-									<h3>Devices</h3>
-									<p>Insert cloud stuff here.</p>
-								</div>
-								<div class="col col1 first">
-									<div class="image round fit">
-										<a class="link"><img src="images/pic03.jpg" alt="" /></a>
-									</div>
-								</div>
-							</div>
-						</div> -->
 						<iframe src="../routePlanning/map.html" id="visualisation"></iframe>
 
 
@@ -242,7 +206,7 @@
 
 											<div class="col col1 first">
 												<div class="image round fit">
-													<a class="link"><img img src="center_photos/DisabilityRoutes/v3.jpg" alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/v3.PNG" alt="" /></a>
 												</div>
 											</div>
 										</div>
@@ -267,7 +231,7 @@
 
 											<div class="col col1 first">
 												<div class="image round fit">
-													<a class="link"><img src="images/pic03.jpg" alt="" /></a>
+													<a class="link"><img src="center_photos/DisabilityRoutes/giftshop.jpg"  alt="" /></a>
 												</div>
 											</div>
 										</div>
