--- a/Webpage/disvis.html
+++ b/Webpage/disvis.html
@@ -39,11 +39,11 @@
 
 
   <div class="column">
-    <img src="https://www.glasgowsciencecentre.org/sites/default/files/2017-09/rsz_gsc_tower_opening_14.jpg" alt="show" style="width:100%">
+    <img src="https://www.glasgowsciencecentre.org/sites/default/files/2017-09/rsz_gsc_tower_opening_14.jpg" alt="this is image" style="width:100%">
   </div>
 
   <div class="center">
-  <button type="button" class="btn btn-primary">Click me</button>
+  <button type="button" class="btn btn-primary vis">Click me</button>
 
 </body>
 </html>
