adding blind bar

--- a/Webpage/home.html
+++ b/Webpage/home.html
@@ -42,17 +42,42 @@
 					</header>
 					<a href="#main" class="button big scrolly">Plan your visit.</a>
 
-					<br>
-					<br>
-					<br>
 
-
-					<a href="disvis.html" class="button">Blind</a>
 				</div>
 			</section>
 
 		<!-- Main -->
 			<div id="main">
+
+
+				<!-- Section -->
+					<section class="wrapper style2">
+						<div class="inner">
+							<!-- 2 Columns -->
+								<div class="flex flex-2">
+									<div class="col col1">
+										<div class="image round fit">
+											<a class="link"><img src="images/tower.jpg" alt="" /></a>
+										</div>
+									</div>
+									<div class="col col2">
+										<h3>Glasgow Tower View</h3>
+										<p>Click here for an audio description of the view from the Glasgow Tower.</p>
+										<a href="disvis.html"><img src="images/blind.png" style="width:25%;"></a>
+
+
+
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+
+									</div>
+								</div>
+						</div>
+					</section>
 
 				<!-- Section -->
 					<section class="wrapper style1">
