--- a/Webpage/disvis.html
+++ b/Webpage/disvis.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class="center">
-  <button type="button" class="btn btn-primary vis">Click me</button>
+  <button type="button" class="btn btn-primary vis">Start</button>
 
 </body>
 </html>
